  documentation on the requirement of pywin32 for running roundup as a
  windows service. Also the windows installer must be run as
  administrator and strong encouragement for installing the pytz
  module added to ``doc/installation.txt``.
- issue2550776: imapServer.py problem. Fixed a missing initialization of the
  logging level if no logging level option is supplied. (John Rouillard)

2016-01-11: 1.5.1

Pay attention:

  If you have installed an intermediate version from our version control
  system and have modified your tracker instance to escape OK and
  error-messages in the HTML templates you need to revert this change.
  If you're upgrading from a previous roundup release version
  you should look into ``doc/upgrading.txt``.  (Ralf Schlatterbeck)

  Also note the default user permissions, see ``doc/upgrading.txt``.

Features:

- The example local_replace.py has been updated to show how to link to
  modern revision systems using hex revision identifiers.
  This extension is used to expand shortcuts in msgs. (Bernhard Reiter)
- Drop comment in user settings about numeric hour offsets instead of using
  pytz timezone names. Due to DST these are wrong half of the year, it is
  much better to use timezone names. (Thomas Arendsen Hein)
- issue2550793: Wrap messages with very long lines in the web interface.
  (Thomas Arendsen Hein)
- New Link / Multilink option "try_id_parsing": Sometimes the key of a
  class can be numeric -- in that case roundup will try to parse the
  value as an ID when evaluating form values -- not as a key. Specifying
  try_id_parsing='no' for these Link/Multilink will skip the ID step,
  default is 'yes'. (Ralf Schlatterbeck)
- New configuration option 'isolation_level' in rdbms section. Currently
  supported for Postgres and mysql, sets the transaction isolation level.
  Wrong history entries for concurrent database updates observed in
  issue2550806 can be prevented by setting this to 'repeatable read' if